fix: atr text was not visible on kumato mode
The Rule: Whenever background is forced,
text color should be set as well

--- a/tomatic/static/components/callinfo_style.styl
+++ b/tomatic/static/components/callinfo_style.styl
@@ -398,6 +398,7 @@ body
     overflow-y: auto
     padding: 0px 8px 8px 8px
     background-color: seashell
+    color: black
     table tr td
       max-width: 40vh
       overflow: hidden
